changed vue compiler target

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,9 @@
     "jsx": "preserve",
     "resolveJsonModule": true
   },
+  "vueCompilerOptions": {
+    "target": 2.7
+  },
   "exclude": [
     "node_modules",
     ".nuxt",
